--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="symbols-panel">
                     <h4>Symbols</h4>
                     <div id="symbols-list">
-                        <div class="symbol">Basic Reasoning</div>
+                        <div class="symbol">Interaction</div>
                     </div>
                 </div>
             </div>
@@ -101,6 +101,7 @@
         </div>
     </div>
     
+    <script src="renderer3d.js"></script>
     <script src="game.js"></script>
 </body>
 </html>
